refactor: clean up CountByOperationRepositoryTest setup and assertions